Fix: add double check when not found session of a verticleId in DirtyClientVerticleCleaner
(cherry picked from commit 35a7dd8ada1e74c13f14a6f19c91ba2095093d64)